--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "reveal.js": "~3.2.0",
     "highlightjs": "~9.0.0",
-    "reveal.js-theme-infosupport": "~0.0.1"
+    "reveal.js-theme-infosupport": "~0.0.1",
+    "webcomponentsjs": "^0.7.20",
+    "qr-code": "webcomponent-qr-code#^0.1.8"
   }
 }
