update dependencies && summary slide

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -4,6 +4,6 @@
     "packageVersion": "0.0.1",
     "deployToGithubPages": true,
     "githubUsername": "riezebosch",
-    "githubRepository": "user-story-mapping"
+    "githubRepository": "user-story-mapping-exercise"
   }
 }
