--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,9 @@
   "name": "user-story-mapping-exercise",
   "version": "0.0.1",
   "dependencies": {
-    "reveal.js": "~3.3.0",
-    "highlightjs": "~9.0.0",
-    "reveal.js-theme-infosupport": "~0.0.1",
+    "reveal.js": "~3.4.1",
+    "highlightjs": "~9.9.0",
+    "reveal.js-theme-infosupport": ">=0.0.4",
     "webcomponentsjs": "^0.7.20",
     "qr-code": "webcomponent-qr-code#^0.1.8"
   }
