--- a/package.json
+++ b/package.json
@@ -3,23 +3,22 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-connect": "^0.10.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "load-grunt-tasks": "^3.2.0", 
-    "grunt-build-control": "^0.5.0",
-    "grunt-coffeelint": "0.0.13",
-    "coffeelint": "^1.0.0"
+    "grunt": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "load-grunt-tasks": "^3.5.2", 
+    "grunt-build-control": "^0.7.1",
+    "grunt-coffeelint": "0.0.16",
+    "coffeelint": "^1.16.0"
   },
   "engines": {
-    "node": ">=0.10.0",
-    "npm": ">=1.3.7"
+    "node": ">=4"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/riezebosch/user-story-mapping-exercise"
+    "url": "git@github.com:riezebosch/user-story-mapping-exercise.git"
 
   },
   "scripts": {
